k8s/test/maps-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maps-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-maps
  template:
    metadata:
      labels:
        component: server-maps
        tier: microservices
        layer: services-internal
    spec:
      serviceAccountName: therr-k8s-service-account
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
      containers:
      - name: server-maps
        image: therrapp/maps-service:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 7773
        env:
        - name: MAPS_SERVICE_API_PORT
          value: "7773"
        - name: URI_WHITELIST
          value: "https://therr.com,https://www.therr.com"
        - name: HONEYCOMB_API_KEY
          valueFrom:
            secretKeyRef:
              name: honeycomb-writekey
              key: HONEYCOMB
        - name: OTEL_EXPORTER_OTLP_PROTOCOL
          value: "grpc"
        - name: LOG_LEVEL
          value: "info"
        - name: MAPS_SERVICE_GOOGLE_CREDENTIALS_BASE64
          valueFrom:
            secretKeyRef:
              name: maps-service-google-app-credentials
              key: MAPS_SERVICE_GOOGLE_APP_CREDENTIALS
        - name: BUCKET_PUBLIC_USER_DATA
          value: "therr-public-user-data"
        - name: BUCKET_PRIVATE_USER_DATA
          value: "therr-private-user-data"
        - name: DB_USER_MAIN_WRITE
          value: "therrAppUser"
        - name: DB_HOST_MAIN_WRITE
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_WRITE
          value: "5432"
        - name: DB_PASSWORD_MAIN_WRITE
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_WRITE
        - name: DB_USER_MAIN_READ
          value: "therrAppUser"
        - name: DB_HOST_MAIN_READ
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_READ
          value: "5432"
        - name: DB_PASSWORD_MAIN_READ
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_READ
        # IndexNow: Must match the same key set on client-web deployment
        - name: INDEXNOW_API_KEY
          value: ""
        - name: MAPS_SERVICE_DATABASE
          value: "therr_maps_service_db"
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: therrjwtsecret
              key: THERRJWT_SECRET
