k8s/test/messages-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messages-service-cluster-ip-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    component: server-messages
  ports:
  - port: 7772
    targetPort: 7772
