k8s/test/push-notifications-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-notifications-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-push-notifications
  template:
    metadata:
      labels:
        component: server-push-notifications
        tier: microservices
        layer: services-internal
    spec:
      serviceAccountName: therr-k8s-service-account
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
      containers:
      - name: server-push-notifications
        image: therrapp/push-notifications-service:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 7775
        env:
        - name: PUSH_NOTIFICATIONS_SERVICE_API_PORT
          value: "7775"
        - name: URI_WHITELIST
          value: "https://therr.com,https://www.therr.com"
        - name: HONEYCOMB_API_KEY
          valueFrom:
            secretKeyRef:
              name: honeycomb-writekey
              key: HONEYCOMB
        - name: LOG_LEVEL
          value: "info"
        - name: LOGGING_DATASET
          value: "production"
        - name: DB_USER_MAIN_WRITE
          value: "therrAppUser"
        - name: DB_HOST_MAIN_WRITE
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_WRITE
          value: "5432"
        - name: DB_PASSWORD_MAIN_WRITE
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_WRITE
        - name: DB_USER_MAIN_READ
          value: "therrAppUser"
        - name: DB_HOST_MAIN_READ
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_READ
          value: "5432"
        - name: DB_PASSWORD_MAIN_READ
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_READ
        - name: PUSH_NOTIFICATIONS_GOOGLE_CREDENTIALS_BASE64
          valueFrom:
            secretKeyRef:
              name: push-notifications-google-app-credentials
              key: PUSH_NOTIFICATIONS_GOOGLE_APP_CREDENTIALS
        - name: MAPS_SERVICE_DATABASE
          value: "therr_maps_service_db"
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: therrjwtsecret
              key: THERRJWT_SECRET
        - name: REDIS_GENERIC_HOST
          value: "redis-cluster-ip-service"
        - name: REDIS_GENERIC_PORT
          value: "6379"
