k8s/test/reactions-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactions-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-reactions
  template:
    metadata:
      labels:
        component: server-reactions
        tier: microservices
        layer: services-internal
    spec:
      serviceAccountName: therr-k8s-service-account
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
      containers:
      - name: server-reactions
        image: therrapp/reactions-service:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 7774
        env:
        - name: REACTIONS_SERVICE_API_PORT
          value: "7774"
        - name: URI_WHITELIST
          value: "https://therr.com,https://www.therr.com"
        - name: HONEYCOMB_API_KEY
          valueFrom:
            secretKeyRef:
              name: honeycomb-writekey
              key: HONEYCOMB
        - name: LOG_LEVEL
          value: "info"
        - name: LOGGING_DATASET
          value: "production"
        - name: REDIS_PUB_HOST
          value: "redis-cluster-ip-service"
        - name: REDIS_PUB_PORT
          value: "6379"
        - name: DB_USER_MAIN_WRITE
          value: "therrAppUser"
        - name: DB_HOST_MAIN_WRITE
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_WRITE
          value: "5432"
        - name: DB_PASSWORD_MAIN_WRITE
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_WRITE
        - name: DB_USER_MAIN_READ
          value: "therrAppUser"
        - name: DB_HOST_MAIN_READ
          value: "127.0.0.1"
        - name: DB_PORT_MAIN_READ
          value: "5432"
        - name: DB_PASSWORD_MAIN_READ
          valueFrom:
            secretKeyRef:
              name: db-password-app
              key: DB_PASSWORD_APP_READ
        - name: REACTIONS_SERVICE_DATABASE
          value: "therr_reactions_service_db"
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: therrjwtsecret
              key: THERRJWT_SECRET
