k8s/test/websocket-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service-cluster-ip-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: server-websocket
  ports:
  - port: 7743
    targetPort: 7743
    protocol: TCP
